--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "classnames": "^2.5.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-login": "^5.2.2",
     "sass": "^1.71.0"
   },
   "devDependencies": {
