--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "classnames": "^2.5.1",
     "next": "13.5.6",
-    "react": "^16",
-    "react-dom": "^16",
+    "react": "^18",
+    "react-dom": "^18",
     "react-google-login": "^5.2.2",
     "sass": "^1.71.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^16",
-    "@types/react-dom": "^16",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "typescript": "^5"
